--- a/mmbase/trunk/contributions/CMSContainer/cmsc/contentrepository/resources/cmsc-repository.properties
+++ b/mmbase/trunk/contributions/CMSContainer/cmsc/contentrepository/resources/cmsc-repository.properties
@@ -61,12 +61,17 @@ content.titlecolumn=Title
 content.creationchannelcolumn=Creationchannel
 content.authorcolumn=Author
 content.lastmodifiedcolumn=Lastmodified
+content.expiredatecolumn=Expiredate
+content.publishdatecolumn=Publishdate
 content.yes=Yes
 content.no=No
 content.move.up=Move up
 content.move.down=Move down
 content.icon.versioning.title=Archive of this element.
 content.move.workflow.message={0}: <b>{1}</b> is moved.
+content.movetochannel.workflow.message={0} has been moved from {1} to {2}.
+content.movetochannel.success=The content element has been moved to {0}.
+content.movetochannel.failed=The content element could not be moved to {0}, this because it was already linked to this channel.
 content.icon.savedform.title=Show saved response forms.
 
 collection.title=Collection
@@ -152,6 +157,7 @@ searchform.useraccount=User
 
 searchform.icon.preview.title=Open a browser with a preview of this element.
 searchform.icon.edit.title=Edit this element.
+searchform.icon.move.title=Move this element to another channel.
 searchform.icon.select.title=Select this element.
 searchform.icon.info.title=Display information about this element.
 searchform.icon.versioning.title=Archive of this element.
