--- a/mmbase/trunk/contributions/CMSContainer/cmsc/edit-webapp/resources/cmsc.properties
+++ b/mmbase/trunk/contributions/CMSContainer/cmsc/edit-webapp/resources/cmsc.properties
@@ -41,6 +41,9 @@ exception.404.message=The page you requested is not available.
 exception.404.description=The error message is: 404 Not Found. <br /> The page or content you requested is not available.
 exception.404.actions=Check the URL.
 
+exception.404.notlinked.message=The content you wanted to preview is not placed on a page.
+exception.404.notlinked.actions=To preview the content, it (or its channel) should be added to one or more pages.
+
 exception.500.title=Error page
 exception.500.message=The page you requested is not available.
 exception.500.description=The error message is: 500 internal server error.
@@ -69,7 +72,7 @@ dashboard.search.search=search
 dashboard.search.advanced=advanced search
 dashboard.welcome.header=welcome message
 dashboard.workoverview.header=work overview
-dashboard.repository.header=Elements last changed by you.
+dashboard.repository.header=The {0} elements last changed by you.
 dashboard.repository.date=date
 dashboard.repository.element=element
 dashboard.repository.title=title
@@ -89,6 +92,7 @@ admin.fullindex=Perform Luceus Fullindex
 admin.publish=Advanced publish
 admin.workflow=Workflow creation
 admin.reactions=Reactions
+admin.versioning=Versioning admin
 admin.egemmail.export=EGEMmail export
 admin.egemmail.admin=EGEMmail admin
 
