--- a/mmbase/trunk/contributions/CMSContainer_Modules/savedform/resources/savedformmodule.properties
+++ b/mmbase/trunk/contributions/CMSContainer_Modules/savedform/resources/savedformmodule.properties
@@ -4,4 +4,5 @@ savedform.not.allowed=You are not allowed to delete saved response forms.
 savedform.title.content=Saved answers
 savedform.savedforms.of=Saved answers for 
 savedform.icon.deleteform=Delete all saved answers
+savedform.icon.downloadform=Download xls
 savedform.icon.deleteanswer=Delete the saved answer
