MMB-1354 added keys for shoppingcart

--- a/contributions/natmm/src/ApplicationResources.properties
+++ b/contributions/natmm/src/ApplicationResources.properties
@@ -358,16 +358,28 @@ shop.relatedshoplinks.continue_shopping=Verder gaan met winkelen
 shop.searchlink.search=ZOEKEN
 shop.searchlink.intheshop=in de winkel
 shop.relatedpools.more=meer
+shop.slideshow.close=Sluit dit venster
 shoppingcart.backtoform=Terug naar uw winkelwagen
 shoppingcart.item=ARTIKEL
 shoppingcart.items=ARTIKELEN
 shoppingcart.inthecart=in het winkelwagentje
 shoppingcart.membershipsform.i_am_member=Ik ben lid!
 shoppingcart.membershipsform.enter_memberid=lidmaatschapsnr. invullen
+shoppingcart.donationtext=Ik steun Natuurmonumenten graag met een extra gift voor voorzieningen voor mensen met een handicap. Ik geef extra:
+shoppingcart.total_costs=UW KOSTEN TOTAAL
+shoppingcart.mandatory_fields=(*) Vul minimaal deze velden in i.v.m. een correcte afhandeling.
+shoppingcart.send=Bestelling versturen
+shoppingcart.email_title=Bestelling Natuurmonumenten
+shoppingcart.order_title=Bestelling Natuurmonumenten
+shoppingcart.incorrect_linktext=terug naar het formulier
+shoppingcart.incorrect_message=U bent vergeten een aantal velden in te vullen. Deze velden zijn nodig voor een correcte afhandeling van uw bestelling. Klik op de onderstaande link om terug te gaan naar het formulier en deze verder in te vullen. De velden die u bent vergeten zijn:
+shoppingcart.correct_linktext=naar de homepage
+shoppingcart.correct_message=Uw bestelling is per email verstuurd naar:
 items.more=Meer
 items.mailafriend=Mail een vriend
 items.information=informatie
 items.description=BESCHRIJVING
 items.lookcloser=KIJK DICHTERBIJ
 items.back=Terug naar de vorige pagina
+
 
