--- a/mmbase/trunk/contributions/natmm/conf/natmmconfig.properties
+++ b/mmbase/trunk/contributions/natmm/conf/natmmconfig.properties
@@ -1,32 +1,15 @@
 ### NatMMConfig.java properties ###
 
-### local development properties ###
 natmmconf.companyName=Natuurmonumenten
 natmmconf.fromEmailAddress=website@natuurmonumenten.nl
 natmmconf.fromCADAddress=denatuurin@natuurmonumenten.nl
 natmmconf.infoUrl=http://localhost:8080/vragen
 
 natmmconf.toEmailAddress=jurn@finalist.com
-natmmconf.liveUrl=http://localhost:8080/", "http://www.prod.natuurmm.asp4all.nl/
+natmmconf.liveUrl=http://localhost:8080/natmm-internet/", "http://www.prod.natuurmm.asp4all.nl/
 natmmconf.tmpMemberId=9002162
 
 natmmconf.toSubscribeAddress=AanmeldingLidmaatschap@Natuurmonumenten.nl
 natmmconf.rootDir=C:/servers/jakarta-tomcat-5.0.30/webapps/natmm-internet/
 natmmconf.tempDir=C:/servers/jakarta-tomcat-5.0.30/tmp/
 natmmconf.incomingDir=C:/servers/jakarta-tomcat-5.0.30/tmp/
-
-
-### production properties ###
-#natmmconf.companyName=Natuurmonumenten
-#natmmconf.fromEmailAddress=website@natuurmonumenten.nl
-#natmmconf.fromCADAddress=denatuurin@natuurmonumenten.nl
-#natmmconf.infoUrl=http://www.natuurmonumenten.nl/vragen
-
-#natmmconf.toEmailAddress=hangyi@xs4all.nl
-#natmmconf.liveUrl="http://www.natuurmonumenten.nl/", "http://www.prod.natuurmm.asp4all.nl/"
-#natmmconf.tmpMemberId=9002162
-
-#natmmconf.toSubscribeAddress=AanmeldingLidmaatschap@Natuurmonumenten.nl
-#natmmconf.rootDir=/export/www/natuurmm/jakarta-tomcat/webapps/ROOT/
-#natmmconf.tempDir=/export/www/natuurmm/jakarta-tomcat/temp/
-#natmmconf.incomingDir=/home/import/incoming/
