--- a/mmbase/trunk/contributions/natmm/conf/natmmconfig.local.properties
+++ b/mmbase/trunk/contributions/natmm/conf/natmmconfig.local.properties
@@ -6,7 +6,7 @@ natmmconf.fromCADAddress=denatuurin@natuurmonumenten.nl
 natmmconf.infoUrl=http://localhost:8080/vragen
 
 natmmconf.toEmailAddress=jurn@finalist.com
-natmmconf.liveUrl=http://localhost:8080/natmm-internet/", "http://www.prod.natuurmm.asp4all.nl/
+natmmconf.liveUrl=http://localhost:8080/natmm-internet/
 natmmconf.tmpMemberId=9002162
 
 natmmconf.toSubscribeAddress=AanmeldingLidmaatschap@Natuurmonumenten.nl
