--- a/mmbase/branches/MMBase-1_8/maven-base/project.properties
+++ b/mmbase/branches/MMBase-1_8/maven-base/project.properties
@@ -8,7 +8,7 @@
 # The following property are used in Maven project files to identify
 # the currentVersion of a project and to specify which version to use
 # of a dependent project. 
-mmbase.version=1.8.1
+mmbase.version=1.8.4-20070102
 maven.multiproject.type=mmbase-module
 
 maven.remote.group=mmbase
