--- a/mmbase/trunk/applications/vwms/build.xml
+++ b/mmbase/trunk/applications/vwms/build.xml
@@ -4,7 +4,18 @@
   <property name="project.package"   value="org/mmbase/applications/vwms" />
   <property name="project.target.templates.dir"   value="vwms" />
 
+  <property name="project.jars.includes" value="email/build/mmbase-email.jar" />
+
   <import file="../buildbase-include.xml" />
+
+
+  <target name="email">
+    <echo message="${applications.dir}/email" />
+    <ant dir="${applications.dir}/email" inheritAll="false" />
+  </target>
+
+  <target name="jar" depends="email,buildbase.jar" />
+
 
 </project>
 
