--- a/mmbase/trunk/build.xml
+++ b/mmbase/trunk/build.xml
@@ -2,7 +2,7 @@
 
 
 MMBase Build File
-$Id: build.xml,v 1.159 2006-12-09 17:12:04 michiel Exp $
+$Id: build.xml,v 1.160 2007-01-08 12:04:28 michiel Exp $
 =================
 
 This build file can be used to build the following from CVS or from the source
@@ -345,7 +345,6 @@ builddate=${builddate}
     <copy file="${servlet.jar}"               todir="${compile.lib.dir}" />
     <copy file="${fileupload.jar}"            tofile="${compile.lib.dir}/commons-fileupload.jar" />
     <copy file="${log4j.jar}"                 tofile="${compile.lib.dir}/log4j.jar" />
-    <copy file="${javamail.jar}"              todir="${compile.lib.dir}" />
     <copy file="${javaactivation.jar}"        todir="${compile.lib.dir}" />
     <copy file="${taglibs-standard-jstl.jar}" todir="${compile.lib.dir}" />
   </target>
@@ -481,7 +480,8 @@ builddate=${builddate}
         <include name="builders/INDEX" />
         <include name="components/**" />
         <include name="functions/**/*.xml"/>
-        <include name="storage/**/*.xml"/>
+        <include name="storage/**/*.xml" />
+        <include name="storage/**/INDEX" />
         <include name="modules/mmbaseroot.xml"/>
         <include name="modules/mmadmin.xml"/>
         <include name="security/classauthentication.xml" />
@@ -498,6 +498,10 @@ builddate=${builddate}
 builders/
 applications/
 modules/
+storage/
+clustering/
+xslt/
+xmlns/
     </echo>
     <echo file="${build.dir}/classes/org/mmbase/config/applications/INDEX">
 Basics.xml
@@ -969,14 +973,6 @@ Build-compiler: ${build.compiler}
       <param name="expandedfile" value="${hsqldb.jar}"/>
     </antcall>
 
-
-    <echo message="javamail" />
-    <antcall target="downloadzip">
-      <param name="sourcefile" value="${javamail.loc}"/>
-      <param name="destfile" value="${javamail.dest}"/>
-      <param name="destdir" value="${javamail.dir}"/>
-      <param name="expandedfile" value="${javamail.jar}"/>
-    </antcall>
 
     <echo message="javaactivation" />
     <antcall target="downloadzip">
