--- a/applications/scan/build.xml
+++ b/applications/scan/build.xml
@@ -5,7 +5,7 @@
   <property name="project.target.templates.dir" value="../" /><!-- scan stuff _must_ be in root -->
   <property name="project.templates.dir" value="${project.source.dir}" />
   <property name="project.templates.include" value="mmeditors/**/*" />
-  <property name="project.jars.includes" value="vwms/build/mmbase-vwms.jar,resources/build/mmbase-resources.jar" />
+  <property name="project.jars.includes" value="vwms/build/mmbase-vwms.jar,resources/build/mmbase-resources.jar,email/build/mmbase-email.jar" />
 
   <import file="../buildbase-include.xml" />
 
