--- a/mmbase/branches/MMBase-1_9/base-webapp/pom.xml
+++ b/mmbase/branches/MMBase-1_9/base-webapp/pom.xml
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>org.mmbase.jquery</groupId>
       <artifactId>jquery-form</artifactId>
-      <version>2.36-1</version>
+      <version>2.73</version>
       <type>war</type>
     </dependency>
 
