--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>mmbase-applications</artifactId>
   <packaging>pom</packaging>
   <name>MMBase Applications</name>
-  <version>1.9-SNAPSHOT</version>
+  <version>1.9.6.rc1</version>
 
   <description>
     Applications are war overlays then can plug in some functionality into an existing MMBase installation.
