--- a/mmbase/tags/MMBase-1_9_6_rc1/applications/rmmci/test/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_rc1/applications/rmmci/test/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>mmbase-rmmci-tests</artifactId>
   <name>MMBase RMMCI TESTS</name>
   <packaging>jar</packaging>
-  <version>1.9-SNAPSHOT</version>
+  <version>1.9.6.rc1</version>
   <description>
     Performs some tests of core again, testing wether they still work
     with the minimalistic class path provided by the rmmci client jar.
