--- a/mmbase/tags/MMBase-1_9_6_rc1/base-webapp/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_rc1/base-webapp/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-parent</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.9.6.rc1</version>
     <relativePath>../maven-base/pom.xml</relativePath>
   </parent>
 
@@ -153,7 +153,7 @@
           <plugin>
             <groupId>org.mmbase.maven</groupId>
             <artifactId>maven-mmbase-plugin</artifactId>
-            <version>1.9-SNAPSHOT</version>
+            <version>1.9.6.rc1</version>
             <executions>
               <execution>
                 <id>installsvnsr</id>
