--- a/mmbase/tags/MMBase-1_9_6_rc1/maven/codestandards/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_rc1/maven/codestandards/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.mmbase.maven</groupId>
     <artifactId>mmbase-maven</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.9.6.rc1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
