--- a/mmbase/tags/MMBase-1_9_6_rc1/contributions/calendar/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_rc1/contributions/calendar/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-application-parent</artifactId>
-    <version>1.9.5</version>
+    <version>1.9.6.rc1</version>
   </parent>
 
   <artifactId>mmbase-calendar</artifactId>
