--- a/base-webapp/pom.xml
+++ b/base-webapp/pom.xml
@@ -92,7 +92,7 @@
     <dependency>
       <groupId>opensymphony</groupId>
       <artifactId>oscache</artifactId>
-      <version>2.4.1</version>
+      <version>2.4</version> <!-- do not use 2.4.1, because then you also need commons logging -->
       <exclusions>
         <exclusion>
           <!-- provided by base-webapp -->
