--- a/mmbase/branches/MMBase-1_9/pom.xml
+++ b/mmbase/branches/MMBase-1_9/pom.xml
@@ -257,12 +257,12 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
           <bottom>${project.name} ${project.version} - ${javadoctimestamp}</bottom>
           <show>package</show>
           <links>
-            <link>http://download.java.net/jdk7/docs/api/</link>
+            <link>http://download.oracle.com/javase/7/docs/api/</link>
             <link>http://java.sun.com/javaee/5/docs/api/</link>
             <link>http://java.sun.com/products/jsp/jstl/1.1/docs/api/</link>
             <link>http://logging.apache.org/log4j/docs/api/</link>
             <link>http://commons.apache.org/fileupload/apidocs/</link>
-            <link>http://lucene.apache.org/java/2_4_1/api/</link>
+            <link>http://lucene.apache.org/java/3_4_0/api/all/</link>
           </links>
           <groups>
             <group>
