--- a/applications/resources/pom.xml
+++ b/applications/resources/pom.xml
@@ -9,11 +9,6 @@
     <version>1.9-SNAPSHOT</version>
   </parent>
 
-  <description>
-    This contains images, attachments, flashobjects, urls node types, and the associated code to deal
-    with them. This application would be installed nearly always.
-  </description>
-
   <artifactId>mmbase-resources</artifactId>
   <name>MMBase Resources</name>
   <packaging>war</packaging>
@@ -23,6 +18,10 @@
     <jai.version>1.1.3</jai.version>
   </properties>
 
+  <description>
+    This contains images, attachments, flashobjects, urls node types, and the associated code to deal
+    with them. This application would be installed nearly always.
+  </description>
 
   <dependencies>
     <dependency>
@@ -52,13 +51,16 @@
 
   </dependencies>
 
+
   <repositories>
     <repository>
       <id>mmbase</id>
+      <name>MMBase Maven2 repository</name>
       <url>http://www.mmbase.org/maven2</url>
     </repository>
     <repository>
-      <id>snapshots</id>
+      <id>mmbase-snapshots</id>
+      <name>MMBase Maven2 snapshots repository</name>
       <url>http://www.mmbase.org/snapshots</url>
     </repository>
   </repositories>
