--- a/maven-base/applications/pom.xml
+++ b/maven-base/applications/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-parent</artifactId>
     <version>1.9-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <relativePath />
   </parent>
 
   <artifactId>mmbase-application-parent</artifactId>
