--- a/mmbase/branches/MMBase-1_9/maven-base/pom.xml
+++ b/mmbase/branches/MMBase-1_9/maven-base/pom.xml
@@ -15,6 +15,7 @@ See http://www.MMBase.org/license
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-cms</artifactId>
     <version>1.9-SNAPSHOT</version>
+    <relativePath />
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
