--- a/mmbase/branches/MMBase-1_9/contributions/poll/pom.xml
+++ b/mmbase/branches/MMBase-1_9/contributions/poll/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-application-parent</artifactId>
-    <version>1.9.5</version>
+    <version>1.9-SNAPSHOT</version>
   </parent>
 
   <artifactId>mmbase-poll</artifactId>
