--- a/mmbase/branches/MMBase-1_9/contributions/calendar/pom.xml
+++ b/mmbase/branches/MMBase-1_9/contributions/calendar/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-application-parent</artifactId>
-    <version>1.9.5</version>
+    <version>1.9-SNAPSHOT</version>
   </parent>
 
   <artifactId>mmbase-calendar</artifactId>
