--- a/mmbase/branches/MMBase-1_9/applications/resources/pom.xml
+++ b/mmbase/branches/MMBase-1_9/applications/resources/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>mmbase-resources</artifactId>
   <name>MMBase Resources</name>
   <packaging>war</packaging>
-  <version>${mmbase.version}</version>
+  <version>1.9-SNAPSHOT</version>
 
   <properties>
     <jai.version>1.1.3</jai.version>
