--- a/maven-base/pom.xml
+++ b/maven-base/pom.xml
@@ -15,6 +15,7 @@ See http://www.MMBase.org/license
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-cms</artifactId>
     <version>1.9-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
  </parent>
 
   <modelVersion>4.0.0</modelVersion>
