--- a/applications/resources/pom.xml
+++ b/applications/resources/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-application-parent</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.9.6</version>
   </parent>
 
   <artifactId>mmbase-resources</artifactId>
   <name>MMBase Resources</name>
   <packaging>war</packaging>
-  <version>1.9-SNAPSHOT</version>
+  <version>1.9.6</version>
 
   <properties>
     <jai.version>1.1.3</jai.version>
