--- a/applications/searchrelate/example-webapp/pom.xml
+++ b/applications/searchrelate/example-webapp/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-parent</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.9.6</version>
   </parent>
 
   <artifactId>example-searchrelate-webapp</artifactId>
