--- a/contributions/aselect/pom.xml
+++ b/contributions/aselect/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-application-parent</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.9.6</version>
   </parent>
 
   <artifactId>mmbase-aselect</artifactId>
   <name>MMBase ASelect</name>
-  <version>1.9-SNAPSHOT</version>
+  <version>1.9.6</version>
  <packaging>war</packaging>
 
   <description>
