--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -20,8 +20,8 @@ See http://www.MMBase.org/license
   <name>MMBase Tests</name>
 
   <properties>
-    <mmbase.version.test>1.9-SNAPSHOT</mmbase.version.test>
-    <mmbase.version>1.9-SNAPSHOT</mmbase.version>
+    <mmbase.version.test>1.9.6</mmbase.version.test>
+    <mmbase.version>1.9.6</mmbase.version>
   </properties>
 
   <build>
