--- a/mmbase/tags/MMBase-1_9_6_Final/maven-base/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_Final/maven-base/pom.xml
@@ -14,7 +14,7 @@ See http://www.MMBase.org/license
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-cms</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.9.6</version>
     <relativePath>../pom.xml</relativePath>
  </parent>
 
