--- a/mmbase/tags/MMBase-1_9_6_Final/maven/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_Final/maven/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.mmbase</groupId>
     <artifactId>mmbase-cms</artifactId>
-    <version>1.9-SNAPSHOT</version>
+    <version>1.9.6</version>
   </parent>
 
   <groupId>org.mmbase.maven</groupId>
