--- a/mmbase/tags/MMBase-1_9_6_Final/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_Final/pom.xml
@@ -13,7 +13,7 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
 
   <groupId>org.mmbase</groupId>
   <artifactId>mmbase-cms</artifactId>
-  <version>1.9-SNAPSHOT</version>
+  <version>1.9.6</version>
   <name>MMBase</name>
 
   <packaging>pom</packaging>
