--- a/mmbase/tags/MMBase-1_9_6_Final/pom.xml
+++ b/mmbase/tags/MMBase-1_9_6_Final/pom.xml
@@ -21,7 +21,7 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
   <properties>
     <compiler.fork>false</compiler.fork>
     <mmbase.version.number>1.9</mmbase.version.number>
-    <mmbase.version.postfix>-SNAPSHOT</mmbase.version.postfix>
+    <mmbase.version.postfix>.6</mmbase.version.postfix>
     <mmbase.version>${mmbase.version.number}${mmbase.version.postfix}</mmbase.version>
     <!-- Cannot be project.version, because then an extension of this cannot have it's own version any more -->
 
