Trying to make all this stuff compile with newer maven version.

--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -29,6 +29,10 @@
     </extensions>
   </build>
 
+  <dependencyManagement>
+
+  </dependencyManagement>
+
   <properties>
     <mmbase.repos>scp://mmbase.org/home/tomcat/downloads/</mmbase.repos>
   </properties>
