--- a/applications/rmmci/pom.xml
+++ b/applications/rmmci/pom.xml
@@ -32,7 +32,7 @@
           <dependency>
             <groupId>org.mmbase</groupId>
             <artifactId>mmbase-utils</artifactId>
-            <version>${mmbase.version}</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>javax.servlet</groupId>
