--- a/contributions/calendar/pom.xml
+++ b/contributions/calendar/pom.xml
@@ -40,6 +40,7 @@
       <plugin>
         <groupId>net.sourceforge.maven-taglib</groupId>
         <artifactId>maven-taglib-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <dontRecurseIntoSubdirs>true</dontRecurseIntoSubdirs>
         </configuration>
