--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,17 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       <timezone>1</timezone>
     </developer>
   </developers>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.mmbase</groupId>
+        <artifactId>mmbase-bom</artifactId>
+        <version>2.0-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <defaultGoal>install</defaultGoal>
@@ -421,10 +432,10 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>8</source>
+          <target>8</target>
           <showDeprecation>true</showDeprecation>
         </configuration>
       </plugin>
@@ -607,7 +618,6 @@ Version $Id: pom.xml,v 1.8 2009/02/20 15:21:28 michiel Exp $
       -->
       <modules>
         <module>maven/assembly-descriptors</module>
-        <module>utils</module>
         <module>bridge</module>
         <module>core</module>
 
