--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -162,22 +162,29 @@
 
   </profiles>
 
-  <distributionManagement>
+  <repositories>
     <repository>
-      <id>mmbase</id>
-      <name>MMBase maven 2 repository</name>
-      <url>scp://mmbase.org/home/tomcat/downloads/maven2</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
+  </repositories>
+
+
+  <distributionManagement>
     <snapshotRepository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 Snapshot Repository</name>
-      <url>scp://mmbase.org/home/tomcat/downloads/snapshots</url>
-      <uniqueVersion>false</uniqueVersion>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
-    <site>
-      <id>mmbase-website</id>
-      <url>scp://mmbase.org/home/tomcat/downloads/mm2/</url>
-    </site>
+    <repository>
+      <id>ossrh-release</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
   </distributionManagement>
 
 
