--- a/applications/streams/test-app/pom.xml
+++ b/applications/streams/test-app/pom.xml
@@ -66,27 +66,15 @@
 
   <repositories>
     <repository>
-      <id>mmbase_repository</id>
-      <url>http://www.mmbase.org/maven2/</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
-    <repository>
-      <id>mmbase_snapshots</id>
-      <url>http://www.mmbase.org/snapshots/</url>
-    </repository>
-
   </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
-    </pluginRepository>
-  </pluginRepositories>
-
 
 </project>
