--- a/contributions/calendar/pom.xml
+++ b/contributions/calendar/pom.xml
@@ -31,19 +31,24 @@ then:
 Michiel Meeuwissen, July 2006</description>
 
 
-<dependencies>
+  <dependencies>
     <dependency>
       <groupId>com.ibm.icu</groupId>
       <artifactId>icu4j</artifactId>
       <version>4.0.1</version>
     </dependency>
-</dependencies>
-
-<repositories>
-  <repository>
-    <id>mmbase</id>
-    <url>http://www.mmbase.org/maven2</url>
-  </repository>
-</repositories>
+  </dependencies>
+  <repositories>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   </project>
