--- a/contributions/principletracker/pom.xml
+++ b/contributions/principletracker/pom.xml
@@ -19,11 +19,17 @@
 
     </dependencies>
 
-    <repositories>
-      <repository>
-        <id>mmbase</id>
-        <url>http://www.mmbase.org/maven2</url>
-      </repository>
-    </repositories>
+  <repositories>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   </project>
