--- a/applications/resources/pom.xml
+++ b/applications/resources/pom.xml
@@ -32,8 +32,8 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.media</groupId>
-      <artifactId>jai_codec</artifactId>
+      <groupId>com.sun.media</groupId>
+      <artifactId>jai-codec</artifactId>
       <version>${jai.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -51,17 +51,16 @@
 
   </dependencies>
 
-
   <repositories>
     <repository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
-    </repository>
-    <repository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 </project>
