--- a/applications/richtext/pom.xml
+++ b/applications/richtext/pom.xml
@@ -19,17 +19,21 @@
   </description>
 
   <properties>
-    <saxon.version>9.1.0.6</saxon.version>
+    <saxon.version>8.7</saxon.version>
   </properties>
 
 
   <dependencies>
+    <!-- TODO mmbase-repo -->
+<!--
+
     <dependency>
       <groupId>org.oscom</groupId>
       <artifactId>mmbase-kupu</artifactId>
       <version>1.4.16-SNAPSHOT</version>
       <type>war</type>
     </dependency>
+-->
 
     <!--
          The XSL's need some functionality not working very well yet in the XSL processor of java.
@@ -57,14 +61,14 @@
   </dependencies>
   <repositories>
     <repository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
-    </repository>
-    <repository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
