--- a/applications/rmmci/test/pom.xml
+++ b/applications/rmmci/test/pom.xml
@@ -74,35 +74,30 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
   <repositories>
     <repository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
-    <repository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
-    </repository>
-
   </repositories>
 
+
   <distributionManagement>
-    <repository>
-      <id>mmbase</id>
-      <name>MMBase maven 2 repository</name>
-      <url>scp://mmbase.org/home/tomcat/downloads/maven2</url>
-    </repository>
     <snapshotRepository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 Snapshot Repository</name>
-      <url>scp://mmbase.org/home/tomcat/downloads/snapshots</url>
-      <uniqueVersion>false</uniqueVersion>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
-    <site>
-      <id>mmbase-website</id>
-      <url>scp://mmbase.org/home/tomcat/downloads/mm2/</url>
-    </site>
+    <repository>
+      <id>ossrh-release</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
   </distributionManagement>
+
 </project>
