--- a/applications/streams/pom.xml
+++ b/applications/streams/pom.xml
@@ -94,6 +94,7 @@
       <version>2.1.1e</version>
       <scope>provided</scope>
     </dependency>
+<!-- TODO mmbase-repo
 
     <dependency>
       <groupId>net.sf.fmj</groupId>
@@ -102,6 +103,7 @@
       <scope>provided</scope>
     </dependency>
 
+-->
 
     <dependency>
       <groupId>junit</groupId>
@@ -110,7 +112,7 @@
     <dependency>
       <groupId>org.mmbase.tests</groupId>
       <artifactId>mmbase-rmmci</artifactId>
-      <version>1.9.2.1</version>
+      <version>1.9-SNAPSHOT</version>
       <classifier>client-skinny</classifier>
       <scope>test</scope>
     </dependency>
@@ -122,15 +124,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
   <repositories>
     <repository>
-      <id>mmbase</id>
-      <url>http://www.mmbase.org/maven2</url>
-    </repository>
-    <repository>
-      <id>snapshots</id>
-      <url>http://www.mmbase.org/snapshots</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 
