--- a/applications/vpro-wizards/pom.xml
+++ b/applications/vpro-wizards/pom.xml
@@ -95,13 +95,14 @@
       <version>4.01</version>
     </dependency>
 
-
+    <!-- TODO mmbase-repo -->
+<!--
     <dependency>
       <groupId>org.mmbase.ckeditor</groupId>
       <artifactId>fckeditor</artifactId>
       <version>2.6.5-0</version>
       <type>war</type>
-    </dependency>
+    </dependency>-->
   </dependencies>
 
   <build>
@@ -130,14 +131,14 @@
   </build>
   <repositories>
     <repository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
-    </repository>
-    <repository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 </project>
