--- a/core/pom.xml
+++ b/core/pom.xml
@@ -197,13 +197,13 @@ See http://www.MMBase.org/license
       <artifactId>junit</artifactId>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>org.mmbase.tests</groupId>
       <artifactId>mmbase-rmmci</artifactId>
       <version>1.9.2.1</version>
       <classifier>client-skinny</classifier>
       <scope>test</scope>
-    </dependency>
+    </dependency>-->
 
   </dependencies>
 
@@ -234,28 +234,17 @@ See http://www.MMBase.org/license
   -->
   <repositories>
     <repository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
-    </repository>
-    <repository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
-    </pluginRepository>
-    <pluginRepository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
-    </pluginRepository>
-  </pluginRepositories>
+
 
   <profiles>
     <profile>
