--- a/example-webapp/pom.xml
+++ b/example-webapp/pom.xml
@@ -223,12 +223,13 @@
       <classifier>examples</classifier>
     </dependency>
 
-    <dependency>
+    <!-- TODO mmbase-repo -->
+   <!-- <dependency>
       <groupId>org.mmbase.editwizards</groupId>
       <artifactId>htmlarea</artifactId>
       <version>3.0-rc1-mm19</version>
       <type>war</type>
-    </dependency>
+    </dependency>-->
 
     <dependency>
       <groupId>hsqldb</groupId>
@@ -262,14 +263,14 @@
   </pluginRepositories>
   <repositories>
     <repository>
-      <id>mmbase</id>
-      <name>MMBase Maven2 repository</name>
-      <url>http://www.mmbase.org/maven2</url>
-    </repository>
-    <repository>
-      <id>mmbase-snapshots</id>
-      <name>MMBase Maven2 snapshots repository</name>
-      <url>http://www.mmbase.org/snapshots</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+       <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
   </repositories>
 </project>
