--- a/maven-base/pom.xml
+++ b/maven-base/pom.xml
@@ -155,9 +155,7 @@ See http://www.MMBase.org/license
         </plugin>
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          <!-- this is a version of the war plugin compiled by Michiel. See http://jira.codehaus.org/browse/MWAR-205 -->
-          <!-- another reason: http://jira.codehaus.org/browse/MWAR-240 -->
-          <version>2.1-beta-2-20090723.092931-2</version>
+          <version>3.3.1</version>
           <configuration>
             <archiveClasses>true</archiveClasses>
             <attachClasses>true</attachClasses>
