--- a/maven-base/pom.xml
+++ b/maven-base/pom.xml
@@ -330,7 +330,7 @@ See http://www.MMBase.org/license
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>buildnumber-maven-plugin</artifactId>
-          <version>1.0-beta-3</version>
+          <version>1.4</version>
         </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
