--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,19 +7,18 @@ on:
     branches: [MMBase-1_9]
   workflow_dispatch:
 
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: mmbase/env:latest
     env:
       MAVEN_OPTS: -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 8
       - name: Build with Maven
-        run: mvn -B --fail-never
+        run: OSSRH_PASSWORD=${{ secrets.OSSRH_PASSWORD }} ./build-all.sh
       - name: Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure()    # run this step even if previous step failed
@@ -28,7 +27,12 @@ jobs:
           path: '**/target/surefire-reports/TEST-*.xml'    # Path to test results
           reporter: java-junit       # Format of test results
           only-summary: 'true'
-
       - name: Deploy with Maven
-        run: OSSRH_PASSWORD=${{ secrets.OSSRH_PASSWORD }} mvn -B -Ddeploy  -DskipTests=true -s $GITHUB_WORKSPACE/.github/settings.xml -Dgpg.skip=true deploy
+        run:  mvn -B -Ddeploy  -DskipTests=true -s $GITHUB_WORKSPACE/.github/settings.xml -Dgpg.skip=true deploy
         if: ${{ github.event_name == 'push' }}
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: example-webapp
+          path: my_file.txt
+
