--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -161,7 +161,7 @@
 
   <repositories>
     <repository>
-      <id>ossrh</id>
+      <id>mmbase-ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        <releases>
         <enabled>false</enabled>
@@ -175,11 +175,11 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>ossrh</id>
+      <id>mmbase-ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
-      <id>ossrh-release</id>
+      <id>mmbase-ossrh-release</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
